# bpm-detector

./: .gitignore  CMakeLists.txt  README.md
src/: bytestream_reader.cpp  bytestream_reader.h  bytestream_reader_unittest.cpp  fourier_transform.cpp  fourier_transform.h  fourier_transform_unittest.cpp  main.cpp  ppm_image.cpp  ppm_image.h  wave_file.h  wave_parse.cpp  wave_parse.h  wave_parse_unittest.cpp  wave_parser.cpp  wave_parser.h  wave_plot.cpp  wave_plot.h
test/: catch_main.cpp  dummy.cpp
